--- a/css/style.css
+++ b/css/style.css
@@ -124,10 +124,19 @@ a {
   background-color: #ee3643;
 }
 
+.main-header__logo-block:hover {
+  background-color: #ca2c37;
+}
+
 .main-header__logo-link {
   font-size: 24px;
   line-height: 24px;
   text-transform: uppercase;
+}
+
+.main-header__bookmarks-text:active,
+.main-header__cart-text:active {
+  opacity: 0.6;
 }
 
 /* Верхняя колонка шапки */
@@ -152,6 +161,18 @@ a {
   background-color: #63a63e;
 }
 
+.main-header__buy-block:hover {
+  background-color: #5fbb2d;
+}
+
+.main-header__buy-block:active {
+  background-color: #518534;
+}
+
+.main-header__buy-button:active {
+  color: rgba(255, 255, 255, 0.5);
+}
+
 .main-header__buy-button {
   color: #ffffff;
 }
@@ -170,6 +191,22 @@ a {
   font-size: 24px;
   line-height: 30px;
   font-weight: 700;
+}
+
+.material-category__link:hover,
+.tools-category__link:hover,
+.machinery-category__link:hover,
+.discounts-category__link:hover,
+.delivery-category__link:hover {
+  background-color: #cccccc;
+}
+
+.material-category__link:active,
+.tools-category__link:active,
+.machinery-category__link:active,
+.discounts-category__link:active,
+.delivery-category__link:active {
+  background-color: #b2b2b2;
 }
 
 .material-category {
@@ -212,6 +249,14 @@ a {
   font-size: 18px;
   line-height: 24px;
   color: gray; /*временно */
+}
+
+.product-slider__slide-link:hover {
+  background-color: #ca2c37;
+}
+
+.product-slider__slide-link:active {
+  background-color: #ba2732;
 }
 
 
