--- a/css/style.css
+++ b/css/style.css
@@ -266,24 +266,29 @@ input[type="radio"].visually-hidden {
   margin-right: 31px;
 }
 
-.main-header__cart-block::before,
-.main-header__bookmarks-block::before {
+.main-header__cart-text::before,
+.main-header__bookmarks-text::before {
   content: "";
   position: absolute;
   top: 12px;
-  left: 0;
   display: block;
-  background-color: red;
+  /* background-color: red; */
 }
 
-.main-header__cart-block::before {
+.main-header__cart-text::before {
+  left: 20px;
   width: 15px;
   height: 15px;
+  background-image: url("../img/cart-icon.svg");
+  opacity: 0.3;
 }
 
-.main-header__bookmarks-block::before {
+.main-header__bookmarks-text::before {
+  left: 17px;
   width: 14px;
   height: 16px;
+  background-image: url("../img/icon-bookmark.svg");
+  opacity: 0.3;
 }
 
 .main-header__bookmarks-text,
@@ -291,6 +296,16 @@ input[type="radio"].visually-hidden {
   margin-top: 14px;
   margin-bottom: 0;
   padding-left: 50px;
+  cursor: pointer;
+}
+
+.main-header__bookmarks-text {
+  padding-left: 44px;
+}
+
+.main-header__bookmarks-text:hover::before,
+.main-header__cart-text:hover::before {
+  opacity: 1;
 }
 
 .main-header__bookmarks-text:active,
@@ -331,7 +346,6 @@ input[type="radio"].visually-hidden {
 }
 
 .main-header__buy-block {
-  /* width: 150px; */
   background-color: #63a63e;
 }
 
@@ -350,7 +364,7 @@ input[type="radio"].visually-hidden {
 .main-header__buy-button {
   display: block;
   width: 109px;
-  padding: 14px 20px 14px 20px;
+  padding: 12px 20px 12px 20px;
   color: #ffffff;
 }
 
