Выравнивание слайдера по пикселю

--- a/css/style.css
+++ b/css/style.css
@@ -68,8 +68,10 @@ img { /* универсальное правило для того, что бы 
 }
 
 .button {
+  padding: 14px 0 14px 0;
   color: #ffffff; /*необходимая персональная стилизация ссылки */
   background-color: #ee3643;
+  border-radius: 2px;
 }
 
 .centering-block {
@@ -444,7 +446,8 @@ input[type="radio"].visually-hidden {
 /* стилизация презентационного блока */
 
 .centering-block--presentation-block { /* тут будет микросетка презентационного блока */
-  /* display: flex; */
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .presentation-category {
@@ -498,7 +501,17 @@ input[type="radio"].visually-hidden {
 .product-slider {
   width: 621px;
   min-height: 266px;
-  outline: 2px solid red;
+}
+
+.product-slider__slide-item { /* для расположения изображения блока как фона */
+  position: relative;
+}
+
+.product-slider__slide-image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: none;
 }
 
 .product-slider__drills-slide {
@@ -524,6 +537,31 @@ input[type="radio"].visually-hidden {
 
 .product-slider__slide-link:active {
   background-color: #ba2732;
+}
+
+.product-slider__buttons-block {
+  display: flex;
+  justify-content: space-between
+}
+
+.product-slider__button { /* сброс изначальных стилей кнопок */
+  padding: 0;
+  border: none;
+  width: 22px;
+  height: 40px;
+  background: none;
+}
+
+.product-slider__button--prev {
+  margin-left: 25px;
+  background-image: url("../img/icon-left.svg");
+  background-color: #000000;
+}
+
+.product-slider__button--next {
+  margin-right: 20px;
+  background-image: url("../img/icon-right.svg");
+  background-color: #000000;
 }
 
 
