--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,7 @@ img { /* универсальное правило для того, что бы 
 }
 
 .button {
-  padding: 14px 0 14px 0;
+  padding: 13px 0 8px 0;
   color: #ffffff; /*необходимая персональная стилизация ссылки */
   background-color: #ee3643;
   border-radius: 2px;
@@ -101,6 +101,10 @@ input[type="radio"].visually-hidden {
   flex-direction: column;
   min-height: 320px;
   background-color: #f3f7f9;
+}
+
+.main-header--page-context {
+  margin-bottom: 59px;
 }
 
 /* Средняя колонка шапки */
@@ -451,14 +455,109 @@ input[type="radio"].visually-hidden {
 }
 
 .presentation-category {
+  position: relative; /* для расположения иконки категории товаров и логотипа новинки */
+  margin-right: 20px;
   width: 300px;
   min-height: 123px;
 }
 
+.service-presentation__new-products::after { /* класс обозначающий наличие новых товаров в категории */
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 60px;
+  height: 59px;
+  background-image: url("../img/new-flag.png");
+}
+
+.presentation-category:nth-child(1),
+.presentation-category:nth-child(2),
+.presentation-category:nth-child(3) {
+  margin-bottom: 20px;
+}
+
+.presentation-category:nth-child(3) {
+  margin-right: 0px;
+}
+
+.service-presentation__floating-block {
+  display: flex;
+  flex-direction: column;
+  margin-left: 19px;
+  margin-right: 0;
+  width: 300px;
+}
+
+.service-presentation__presentation-category--discounts-category,
+.service-presentation__presentation-category--delivery-category {
+  margin-right: 0;
+}
+
 .presentation-category__title {
+  margin: 0;
+  margin-top: 23px;
+  margin-left: 22px;
+  margin-bottom: 10px;
   font-size: 24px;
   line-height: 30px;
   font-weight: 700;
+}
+
+.presentation-category__title::after {
+  content: "";
+  position: absolute;
+  width: 50px;
+  height: 50px;
+}
+
+.presentation-category__title--material-title::after {
+  top: 31px;
+  right: 43px;
+  width: 44px;
+  height: 65px;
+  background-image: url("../img/icon-1.svg");
+}
+
+.presentation-category__title--tools-title::after {
+  top: 33px;
+  right: 28px;
+  width: 75px;
+  height: 61px;
+  background-image: url("../img/icon-2.svg");
+}
+
+.presentation-category__title--machinery-title::after {
+  top: 31px;
+  right: 31px;
+  width: 78px;
+  height: 62px;
+  background-image: url("../img/icon-3.svg");
+}
+
+.presentation-category__title--discounts-title::after {
+  top: 27px;
+  right: 45px;
+  width: 59px;
+  height: 72px;
+  background-image: url("../img/icon-4.svg");
+}
+
+.presentation-category__title--delivery-title::after {
+  top: 32px;
+  right: 31px;
+  width: 78px;
+  height: 63px;
+  background-image: url("../img/icon-5.svg");
+}
+
+.presentation-category__link {
+  display: block;
+  margin-left: 25px;
+  padding: 12px 0 8px 0;
+  width: 135px;
+  text-align: center;
+  text-transform: uppercase;
 }
 
 .presentation-category__link:hover {
@@ -499,36 +598,63 @@ input[type="radio"].visually-hidden {
 /* Стилизация слайдера */
 
 .product-slider {
+  position: relative;
   width: 621px;
   min-height: 266px;
 }
 
 .product-slider__slide-item { /* для расположения изображения блока как фона */
+  /* position: relative; */
+  margin: 0 auto;
+  width: 576px;
+}
+
+
+.product-slider__slide-slogan {
+  z-index: 2; /* для создание расслоения слайда */
   position: relative;
 }
 
 .product-slider__slide-image {
+  z-index: 1; /* для создание расслоения слайда */
   position: absolute;
   top: 0;
   left: 0;
+}
+
+.product-slider__perforators-slide {
   display: none;
 }
 
 .product-slider__drills-slide {
-  display: none; /* Временно, для удобного построения сетки */
+  /* display: none; */
 }
 
 .product-slider__slide-title {
+  z-index: 2; /* для создание расслоения слайда */
+  position: relative;
+  margin: 22px 0 2px 0;
   font-size: 36px;
   line-height: 36px;
   font-weight: 700;
-  color: gray; /*временно */
+  text-transform: uppercase;
+  color: #ffffff; /*временно */
 }
 
 .product-slider__slide-slogan {
+  margin: 0 0 30px 0;
   font-size: 18px;
   line-height: 24px;
-  color: gray; /*временно */
+  color: #ffffff; /*временно */
+}
+
+.product-slider__slide-link {
+  z-index: 2; /* для создание расслоения слайда */
+  position: relative;
+  margin-left: 4px;
+  padding-left: 49px;
+  padding-right: 45px;
+  text-transform: uppercase;
 }
 
 .product-slider__slide-link:hover {
@@ -540,8 +666,11 @@ input[type="radio"].visually-hidden {
 }
 
 .product-slider__buttons-block {
+  z-index: 2; /* для создание расслоения слайда */
+  position: relative;
   display: flex;
-  justify-content: space-between
+  justify-content: space-between;
+  margin: 0 0 65px 0px;
 }
 
 .product-slider__button { /* сброс изначальных стилей кнопок */
@@ -553,17 +682,62 @@ input[type="radio"].visually-hidden {
 }
 
 .product-slider__button--prev {
-  margin-left: 25px;
   background-image: url("../img/icon-left.svg");
-  background-color: #000000;
 }
 
 .product-slider__button--next {
-  margin-right: 20px;
   background-image: url("../img/icon-right.svg");
-  background-color: #000000;
 }
 
+.product-slider__toggle-block { /* временно */
+  z-index: 2; /* для создание расслоения слайда */
+  position: relative;
+  bottom: 17px; /* над этом вариантом расположения еще нужно подумать */
+  display: flex;
+  justify-content: space-between;
+  margin: 0 auto;
+  width: 30px;
+  min-height: 10px;
+}
+
+.product-slider__toggle-slide {
+  position: relative;
+  width: 10px;
+  height: 10px;
+  background-color: #ffffff;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+/* переключения слайдера при отключенном javascript */
+#perforator-slide:checked ~ .product-slider__toggle-block .product-slider__toggle-slide--perforator-toggle::after,
+#drill-slide:checked ~ .product-slider__toggle-block .product-slider__toggle-slide--drill-toggle::after {
+  content: "";
+  position: absolute;
+  top: 2px;
+  left: 2px;
+  width: 6px;
+  height: 6px;
+  background-color: #ee3643;
+  border-radius: 50%;
+}
+
+#perforator-slide:checked ~ .product-slider__drills-slide {
+  display: none;
+}
+
+#perforator-slide:checked ~ .product-slider__perforators-slide {
+  display: block;
+}
+
+#drill-slide:checked ~ .product-slider__perforators-slide {
+  display: none;
+}
+
+#drill-slide:checked ~ .product-slider__drills-slide {
+  display: block;
+}
+/* переключения слайдера при отключенном javascript */
 
 /* Стилизация слайдера */
 
