--- a/css/style.css
+++ b/css/style.css
@@ -449,9 +449,14 @@ input[type="radio"].visually-hidden {
 
 /* стилизация презентационного блока */
 
+.service-presentation--page-context { /* стилизация блока исключительно в рамках этой страницы */
+  margin-bottom: 53px;
+}
+
 .centering-block--presentation-block { /* тут будет микросетка презентационного блока */
   display: flex;
   flex-wrap: wrap;
+  align-items: flex-start;
 }
 
 .presentation-category {
@@ -472,7 +477,7 @@ input[type="radio"].visually-hidden {
 }
 
 .presentation-category:nth-child(1),
-.presentation-category:nth-child(2),
+/* .presentation-category:nth-child(2), */
 .presentation-category:nth-child(3) {
   margin-bottom: 20px;
 }
@@ -493,6 +498,7 @@ input[type="radio"].visually-hidden {
 .service-presentation__presentation-category--delivery-category {
   margin-right: 0;
 }
+
 
 .presentation-category__title {
   margin: 0;
@@ -679,6 +685,7 @@ input[type="radio"].visually-hidden {
   width: 22px;
   height: 40px;
   background: none;
+  cursor: pointer;
 }
 
 .product-slider__button--prev {
@@ -766,7 +773,8 @@ input[type="radio"].visually-hidden {
 .top-products__head-block {
   display: flex;
   justify-content: space-between;
-  padding: 0 24px 0 30px;
+  align-items: center;
+  padding: 0 24px 0 28px;
   background-color: #f9f5f0;
 }
 
@@ -776,6 +784,16 @@ input[type="radio"].visually-hidden {
   line-height: 30px;
   text-transform: uppercase;
   color: #32425c;
+}
+
+.top-products__title {
+  margin: 30px 0;
+}
+
+.top-products__link {
+  padding-left: 55px;
+  padding-right: 55px;
+  text-transform: uppercase;
 }
 
 .store-product {
